--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,7 +1,7 @@
 ﻿#mainWindow {
     background-size: cover;
     background-image: url("/images/main_background.jpeg");
-    height: 700px;
+    min-height: 700px;
     color: white;
 }
 
@@ -18,9 +18,8 @@
     background-image: -moz-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
     background-image: -webkit-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
     background-image: -ms-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
-    width: 442px;
+    max-width: 442px;
     height: 480px;
-    margin: 0 0 0 38px;
 }
 
 .download {
@@ -31,9 +30,36 @@
     background-size: cover;
     width: 254px;
     height: 64px;
-    background-color:transparent;
-    border:none;
+    background-color: transparent;
+    border: none;
 }
+
 .y-offset {
-    height:10px
+    height: 10px;
+}
+.y-offset-2 {
+    height: 15px;
+}
+
+.submit-left {
+    height: 65px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background: linear-gradient(45deg, #aa0000, #ff6d6d);
+    display: inline-block;
+    float: left;
+}
+
+.submit-right {
+    height: 65px;
+    display: inline-block;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: linear-gradient(180deg, #FFB399, rgb(255, 109, 58));
+}
+
+.btn-submit {
+    background-color:transparent;
+    padding:0;
+    border:0;
 }
