--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -2,26 +2,38 @@
     <div class="row" id="mainWindow">
         <div class="container" id="subWindow">
             <div class="row" id="offset"> </div>
-            <div class="col-md-6" id="leftPanel">
+            <div class="col-xs-12 col-md-6" id="leftPanel">
                 <div class="row">
-                    <p class="h-futura main-header">Service Description</p>
+                    <span class="tk-futura-pt h main-header 
+                          col-xs-12
+                          col-md-12
+                          ">Service Description</span>
                 </div>
                 <ng-include src="'/controls/spacer.html'"></ng-include>
-                <div class="row">
-                    <p class="h-futura-2">40%</p>
-                    <p class="h-futura-3">random statistics</p>
+                <div class="row" style="position:relative">
+                    <span class="tk-futura-pt h2 
+                          col-xs-6
+                          col-sm-3 col-sm-offset-2
+                          col-md-4 col-md-offset-0
+                          ">40%</span>
+                    <span class="tk-futura-pt h3 
+                          col-xs-5
+                          col-md-7
+                          " style="position:absolute;bottom:10px">random statistics</span>
                 </div>
                 <ng-include src="'/controls/spacer.html'"></ng-include>
                 <div ng-repeat="listItem in product.listItems">
                     <div ng-include src="'controls/checkbox_li.html'"></div>
                 </div>
+                <div class="y-offset-2"/>
             </div>
-            <div class="col-md-6" id="rightPanel">
-                <img src="images/arrow.png" style="position:absolute" />
+            <div class="col-xs-12 col-md-5 col-md-offset-1" id="rightPanel">
+                <img src="images/arrow.png" style="position:absolute;left:-18px" />
                 <div class="row">
-                    <span class="p-2-bold p-shadow" style="
-                        margin-left: 216px;
-                        width: 199px;
+                    <span class="tk-futura-pt p-2-bold p-shadow
+                          col-xs-10 col-xs-offset-2
+                          col-sm-5 col-sm-offset-3
+                          " style="
                         display: inline-block;">Subscribe to yet another FREE mailing list!</span>
                 </div>
                 <form method="post" id="subscribeForm">
@@ -62,17 +74,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <div class="col-xs-12">
-                                <div class="download container" style="display:block;margin:auto">
-                                    <div class="row y-offset"/>
-                                    <div class="row">
-                                        <div class="col-xs-3">
-                                            <span class="glyphicon glyphicon-download-alt" style="font-size:43px;color:white"></span>
-                                        </div>
-                                        <input type="submit" value="Download" class="col-xs-9 p-submit" style="background:none;background-color:transparent;border:none;margin-top:3px"/>
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="submit-left col-xs-4 col-sm-2 col-sm-offset-1 col-lg-offset-2">
+                                <div class="y-offset" />
+                                <span class="glyphicon glyphicon-download-alt" style="font-size:43px;color:white;display:table;"></span>
+                            </div>
+                            <div class="submit-right col-xs-8 col-sm-6">
+                                <div class="y-offset-2" />
+                                <input type="submit" value="Download" class="btn btn-submit tk-futura-pt p-submit" />
                             </div>
                         </div>
                     </div>
