had to fix button align for md

--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -75,7 +75,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="submit-left col-xs-4 col-sm-2 col-sm-offset-1 col-lg-offset-2">
+                            <div class="submit-left 
+                                 col-xs-4 
+                                 col-sm-2 col-sm-offset-1 
+                                 col-md-2 col-md-offset-2
+                                 col-lg-offset-2">
                                 <div class="y-offset" />
                                 <span class="glyphicon glyphicon-download-alt" style="font-size:43px;color:white;display:table;"></span>
                             </div>
