--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -45,32 +45,32 @@
                     <div class="right-panel container">
                         <div class="row" style="height:65px" />
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <input type="text" class="form-control" name="firstname" id="tbFirstName" placeholder="First Name" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <input type="text" class="form-control" name="lastname" id="tbLastName" placeholder="Last Name" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <input type="email" class="form-control" name="email" id="tbEmail" placeholder="Email" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <input type="tel" class="form-control" name="phone" placeholder="Phone number" id="tbPhone" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <ng-include src="'controls/select_country.html'" />
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-10 col-xs-offset-1">
                                 <div class="input-group">
                                     <span class=" input-group-addon">
                                         Enter Free Prize Drawing
