--- a/public/style/index.css
+++ b/public/style/index.css
@@ -123,5 +123,5 @@ html {
 }
 
 .p-shadow {
-    text-shadow: 0 3px 7px rgba(0, 0, 0, 0.35);
+    /*text-shadow: 0 3px 7px rgba(0, 0, 0, 0.35);*/
 }
