--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -18,7 +18,7 @@
                          col-md-12
                          ">
                         <span class="tk-futura-pt h2">40%</span>
-                        <div style="width:10px;display:inline-block"/>
+                        <div style="width:10px;display:inline-block" />
                         <span class="tk-futura-pt h3"
                               style="">
                             random statistics
@@ -32,18 +32,18 @@
                 <div class="y-offset-2" />
             </div>
             <div class="col-xs-12 col-md-5 col-md-offset-1" id="rightPanel">
-                <img src="images/black_arrow.png" style="position:absolute;left:-18px" id="arrow" />
+                <img src="images/Green_arrow.png" style="position:absolute;left:-18px" id="arrow" />
                 <div class="row">
                     <span class="tk-futura-pt p-2-bold p-shadow
-                          col-xs-10 col-xs-offset-2
-                          col-sm-5 col-sm-offset-3
+                          col-xs-11 col-xs-offset-1
+                          col-sm-5 col-sm-offset-4
                           col-md-7 col-md-offset-4
                           " style="
                         display: inline-block;">Subscribe to yet another FREE mailing list!</span>
                 </div>
                 <form method="post" id="subscribeForm">
                     <div class="right-panel container">
-                        <div class="row" style="height:65px" />
+                        <div class="row" style="height:43px" />
                         <div class="form-group row">
                             <div class="col-xs-10 col-xs-offset-1">
                                 <input type="text" class="form-control" name="firstname" id="tbFirstName" placeholder="First Name" />
@@ -70,13 +70,17 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-xs-10 col-xs-offset-1">
-                                <div class="input-group">
-                                    <span class=" input-group-addon">
-                                        Enter Free Prize Drawing
-                                    </span>
-                                    <input style="margin-left:10px" type="checkbox" class="form-control  " name="enterdraw" />
-                                </div>
+                            <div class="col-xs-10 col-xs-offset-1" style="position:relative">
+                                <input type="checkbox" 
+                                       style="font-size:30px;
+                                           display:inline-block"
+                                       class="checkbox" 
+                                       id="cbEnterDrawing" 
+                                       value="enterDraw">
+                                <span class=" tk-acumin-pro"
+                                      style="font-size:12px">
+                                    Enter Free Prize Drawing
+                                </span>
                             </div>
                         </div>
                         <div class="row">
@@ -86,10 +90,10 @@
                                  col-md-2 col-md-offset-2
                                  col-lg-offset-2">
                                 <div class="y-offset" />
-                                <span class="glyphicon glyphicon-download-alt" style="font-size:43px;color:white;display:table;"></span>
+                                <span class="glyphicon glyphicon-download-alt" style="font-size:43px;color:#333;display:table;"></span>
                             </div>
-                            <div class="submit-right 
-                                 col-xs-7 
+                            <div class="submit-right
+                                 col-xs-7
                                  col-sm-6
                                  "
                                  style="text-align:center">
