--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -32,7 +32,7 @@
                 <div class="y-offset-2" />
             </div>
             <div class="col-xs-12 col-md-5 col-md-offset-1" id="rightPanel">
-                <img src="images/Green_arrow.png" style="position:absolute;left:-18px" id="arrow" />
+                <img src="images/arrow_green.png" style="position:absolute;left:-18px" id="arrow" />
                 <div class="row">
                     <span class="tk-futura-pt p-2-bold p-shadow
                           col-xs-11 col-xs-offset-1
