changes to form again

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -55,7 +55,7 @@
     border-bottom-right-radius:5px;
     height: 65px;
     display: inline-block;
-    background: #7CF9BC;
+    background: #1AB000;
 }
 
 .btn-submit {
