--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -71,14 +71,15 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-xs-10 col-xs-offset-1" style="position:relative">
-                                <input type="checkbox" 
+                                <input type="checkbox"
                                        style="font-size:30px;
                                            display:inline-block"
-                                       class="checkbox" 
-                                       id="cbEnterDrawing" 
+                                       class="checkbox"
+                                       id="cbEnterDrawing"
                                        value="enterDraw">
                                 <span class=" tk-acumin-pro"
-                                      style="font-size:12px">
+                                      style="font-size:12px;
+                                    margin-left:5px;">
                                     Enter Free Prize Drawing
                                 </span>
                             </div>
