--- a/public/style/main.css
+++ b/public/style/main.css
@@ -15,9 +15,7 @@
 
 .right-panel {
     border-radius: 25px;
-    background-image: -moz-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
-    background-image: -webkit-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
-    background-image: -ms-radial-gradient( 50% 50%, circle closest-side, rgb(27,144,226) 0%, rgb(157,217,251) 100%);
+    background-color:#25A3FF;
     max-width: 442px;
     height: 435px;
 }
