--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -32,12 +32,12 @@
                 <div class="y-offset-2" />
             </div>
             <div class="col-xs-12 col-md-5 col-md-offset-1" id="rightPanel">
-                <img src="images/arrow_green.png" style="position:absolute;left:-18px" id="arrow" />
+                <img src="images/arrow_green.png" style="position:absolute;left:-18px;top:-16px" id="arrow" />
                 <div class="row">
                     <span class="tk-futura-pt p-2-bold p-shadow
                           col-xs-11 col-xs-offset-1
                           col-sm-5 col-sm-offset-4
-                          col-md-7 col-md-offset-4
+                          col-md-10 col-md-offset-1
                           " style="
                         display: inline-block;">Subscribe to yet another FREE mailing list!</span>
                 </div>
@@ -87,7 +87,7 @@
                         <div class="row">
                             <div class="submit-left
                                  col-xs-3 col-xs-offset-1
-                                 col-sm-2 col-sm-offset-1
+                                 col-sm-2 col-sm-offset-2
                                  col-md-2 col-md-offset-2
                                  col-lg-offset-2">
                                 <div class="y-offset" />
