--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -98,7 +98,7 @@
                                  col-sm-6
                                  "
                                  style="text-align:center">
-                                <div class="y-offset-2" />
+                                <div style="height:15px" />
                                 <input type="submit" value="Download" class="btn btn-submit tk-futura-pt p-submit" />
                             </div>
                         </div>
