--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -6,6 +6,7 @@
                 <div class="row"
                      style="text-align:center">
                     <span class="tk-futura-pt h main-header
+                          col-xs-12
                           col-md-12
                           ">
                         Service Description
