better font resizing

--- a/public/views/sub/product.html
+++ b/public/views/sub/product.html
@@ -19,7 +19,7 @@
                          col-md-12
                          ">
                         <span class="tk-futura-pt h2">40%</span>
-                        <div style="width:10px;display:inline-block" />
+                     <!--   <div style="width:10px;display:inline-block" />-->
                         <span class="tk-futura-pt h3"
                               style="">
                             random statistics
