--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,6 +1,7 @@
 body {
-    font-size:100%;
+    font-size: 100%;
 }
+
 .canvas-holder input[type=button] {
     min-width: 100px;
     height: 40px;
@@ -86,7 +87,7 @@ html {
 }
 
 .tk-futura-pt.h2 {
-    font-size: 7em;
+    font-size: 8em;
     color: rgb(54, 54, 54);
     line-height: 1.2;
     font-weight: 700;
@@ -94,7 +95,7 @@ html {
 }
 
 .tk-futura-pt.h3 {
-    font-size: 3em;
+    font-size: 4em;
     font-weight: 400;
     color: rgb(54, 54, 54);
     line-height: 1.2;
@@ -109,14 +110,21 @@ html {
 }
 
 .tk-acumin-pro.p-2 {
-    font-size:1.5em;
+    font-size: 1.5em;
     line-height: 1.2;
     font-weight: 400;
-    color:white
+    color: white;
 }
 
 .tk-futura-pt.p-2-bold {
     font-size: 2em;
+    color: rgb(54, 54, 54);
+    line-height: 1.2;
+    font-weight: 400;
+}
+
+.tk-futura-pt.p-3 {
+    font-size: 2.5em;
     color: rgb(54, 54, 54);
     line-height: 1.2;
     font-weight: 400;
