a little better still

--- a/public/partials/product/left.html
+++ b/public/partials/product/left.html
@@ -1,4 +1,5 @@
-﻿<div class="col-xs-12 col-md-6" id="leftPanel">
+﻿<div class="col-xs-12
+     col-md-6" id="leftPanel">
     <ng-include src="'/partials/product/left/header.html'"></ng-include>
     <ng-include src="'/controls/spacer.html'"></ng-include>
     <ng-include src="'/partials/product/left/blurb.html'"></ng-include>
