about to add cool about stuff

--- a/public/partials/product/right.html
+++ b/public/partials/product/right.html
@@ -14,12 +14,12 @@
             <div class="row" style="height:43px" />
             <div class="form-group row">
                 <div class="col-xs-10 col-xs-offset-1">
-                    <input type="text" class="form-control" name="firstname" id="tbFirstName" placeholder="First Name" />
+                    <input type="text" class="form-control" name="fname" id="tbFirstName" placeholder="First Name" />
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-xs-10 col-xs-offset-1">
-                    <input type="text" class="form-control" name="lastname" id="tbLastName" placeholder="Last Name" />
+                    <input type="text" class="form-control" name="lname" id="tbLastName" placeholder="Last Name" />
                 </div>
             </div>
             <div class="form-group row">
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group row">
                 <div class="col-xs-10 col-xs-offset-1">
-                    <input type="tel" class="form-control" name="phone" placeholder="Phone number" id="tbPhone" />
+                    <input type="text" class="form-control" name="phone" placeholder="Phone number" id="tbPhone" />
                 </div>
             </div>
             <div class="form-group row">
