Made technologies page dynamic

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,14 +1,7 @@
-﻿<div class="container" id="containerAbout">
-    <div class="row">
-        <div class="jumbotron col-md-6">
-            <h2 class="tk-futura">About This Website</h2>
-            <p class="tk-acumin-pro">
-                This website is a demo landing-page I made for my portfolio to show I'm capable of making professional-looking websites
-                from scratch.
-            </p>
-        </div>
-        <div class="col-md-12" id="technologies">
+﻿<link href="/style/about.css" rel="stylesheet" />
+<div class="container" id="containerAbout">
+    <div id="offset" style="height:15px"></div>
+    <div ui-view="technologies">
 
-        </div>
     </div>
 </div>
