--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,7 +1,17 @@
 ﻿<link href="/style/about.css" rel="stylesheet" />
 <div class="container" id="containerAbout">
     <div id="offset" style="height:15px"></div>
-    <div ui-view="technologies">
-
+    <div ui-view="technologies"> </div>
+    <div class="container ">
+        <div id="footer" class="row" style="">
+            <div class="col-md-12">
+                <p>
+                    Like this site? Help yourself to <a href="https://github.com/jmbeach/demosite">
+                        the code!
+                        <img src="/bower_components/svg-porn/logos/github-octocat.svg" style="width:7em" />
+                    </a>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
