--- a/public/partials/product/right.html
+++ b/public/partials/product/right.html
@@ -2,11 +2,12 @@
     <img src="images/arrow_green.png" style="position:absolute;left:-18px;top:-16px" id="arrow" />
     <div class="row">
         <span class="tk-futura-pt p-2-bold p-shadow
-                          col-xs-9 col-xs-offset-3
-                          col-sm-10 col-sm-offset-2
+                          col-xs-8 col-xs-offset-2
+                          col-sm-8 col-sm-offset-2
                           col-md-12 col-md-offset-0
                           col-lg-12 col-lg-offset-0
                           " style="
+                        text-align:center;
                         display: inline-block;">Subscribe to yet another FREE mailing list!</span>
     </div>
     <form method="post" id="subscribeForm">
